added right storyboard view controller

--- a/AHPP/AHPP/Base.lproj/Main.storyboard
+++ b/AHPP/AHPP/Base.lproj/Main.storyboard
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7ME-ma-Luj">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--Data View Controller-->
+        <!--View Controller-->
         <scene sceneID="JeS-Cc-1vS">
             <objects>
-                <viewController id="7ME-ma-Luj" customClass="DataViewController" customModule="helo_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="7ME-ma-Luj" customClass="ViewController" customModule="AHPP" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YHw-L9-QzK"/>
                         <viewControllerLayoutGuide type="bottom" id="Agr-c6-e4u"/>
