--- a/AHPP/AHPP/Base.lproj/Main.storyboard
+++ b/AHPP/AHPP/Base.lproj/Main.storyboard
@@ -1237,13 +1237,18 @@
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="teW-tA-GAp">
                                 <rect key="frame" x="39" y="822" width="557" height="80"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oAZ-oH-T0D">
                                 <rect key="frame" x="596" y="822" width="164" height="80"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <action selector="extraWeightTextChanged:" destination="7ME-ma-Luj" eventType="editingDidEnd" id="37G-LV-f8U"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="14" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSe-Gf-oJP">
                                 <rect key="frame" x="9" y="822" width="30" height="80"/>
@@ -1489,6 +1494,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
+                        <outlet property="acualPayload" destination="fFw-Nv-S56" id="cGA-qZ-v1e"/>
                         <outlet property="adjustedWeightHIGE" destination="AEr-6g-YDh" id="ea0-fB-e8y"/>
                         <outlet property="adjustedWeightHOGE" destination="Khs-C4-Cw0" id="qj5-MV-y1Q"/>
                         <outlet property="adjustedWeightHOGEJ" destination="rjz-0y-2xh" id="WfM-g5-cWs"/>
@@ -1532,6 +1538,7 @@
                         <outlet property="exceedsHIGE" destination="mei-3s-Ddc" id="f3g-8f-MlL"/>
                         <outlet property="exceedsHOGE" destination="YHm-Qp-u2p" id="OcZ-Ow-RNe"/>
                         <outlet property="exceedsHOGEJ" destination="bHv-ZD-LFB" id="JEW-f1-q4Z"/>
+                        <outlet property="extraWeightTextField" destination="oAZ-oH-T0D" id="hir-yc-FTS"/>
                         <outlet property="flightCrewWeight" destination="UjQ-Y6-CFb" id="O1x-lT-2f0"/>
                         <outlet property="fuelWeightDeparture" destination="RFR-TS-KbT" id="oBf-bh-1s4"/>
                         <outlet property="fuelWeightDestination" destination="HdB-8J-KhW" id="mPK-Bg-oHz"/>
